--- a/app/src/main/res/layout/joke_item.xml
+++ b/app/src/main/res/layout/joke_item.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp"
-    android:orientation="vertical">
+    android:layout_margin="15dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="5dp"
+    app:cardMaxElevation="5dp"
+    android:orientation="vertical"
+    app:cardPreventCornerOverlap="true">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:elevation="8dp"
+        app:cardMaxElevation="12dp"
         app:cardCornerRadius="4dp">
 
         <TextView
@@ -21,5 +27,5 @@
             android:text="Broma de Chuck Norris"
             android:textStyle="bold"/>
 
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
